--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<meta name="description" content="В интернет магазине «Magnat LZR Pro» Вы можете заказать наушники Magnat LZR 540, 580, 580s, 588bt, 760, 765, 980 в Украине и Харькове по выгодной цене">
 	<meta name="keywords" content="Наушники, Headphones, Magnat, LZR, Харьков, в Харькове, в Украине, Магнат, ЛЗР">
-	<meta name="robots" content="all">
+	<meta name="robots" content="noindex, nofollow"/>
 	<meta name="revisit-after" content="5 days">
 
 	<meta property="fb:app_id" content="1795841320651402" />
