--- a/588bt.html
+++ b/588bt.html
@@ -7,7 +7,7 @@
 
 	<meta name="description" content="Наушники Magnat LZR 588bt в Харькове и Украине">
 	<meta name="keywords" content="Наушники, Headphones, Magnat, 588bt, bluetooth, LZR, Харьков, Украине, Магнат, ЛЗР">
-	<meta name="robots" content="all">
+	<meta name="robots" content="noindex, nofollow"/>
 	<meta name="revisit-after" content="5 days">
 
 	<meta property="fb:app_id" content="1795841320651402" />
