--- a/980.html
+++ b/980.html
@@ -7,7 +7,7 @@
 
 	<meta name="description" content="Наушники Magnat LZR 980 в Харькове и Украине">
 	<meta name="keywords" content="Наушники, Headphones, Magnat, LZR, 980, Харьков, Украине, Магнат, ЛЗР">
-	<meta name="robots" content="all">
+	<meta name="robots" content="noindex, nofollow"/>
 	<meta name="revisit-after" content="5 days">
 
 	<meta property="fb:app_id" content="1795841320651402" />
